--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -48,6 +48,7 @@
         "role": "Role",
         "position": "Position",
         "image": "Avatar",
-        "save": "Save user"
+        "save": "Save user",
+        "edit": "Edit user"
     }
 }
