--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -48,6 +48,7 @@
         "role": "Vai trò",
         "position": "Chức danh",
         "image": "Ảnh đại diện",
-        "save": "Lưu người dùng"
+        "save": "Lưu người dùng",
+        "edit": "Lưu thay đổi"
     }
 }
