Tạo Data Hoàn Tất Section Bác Sĩ Nổi Bật Trong Tuần | Redux-React Cho Người Mới Bắt Đầu

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,7 +12,7 @@
         "welcome": "Welcome"
     },
     "banner": {
-        "title1": "MEDICAL BACKGROUND",
+        "title1": "MEDICAL PLATFORM",
         "title2": "COMPREHENSIVE HEALTH CARE",
         "child1": "Specialized examination",
         "child2": "Romote examinatio",
@@ -39,7 +39,7 @@
     "manage-user": {
         "add": "Add a new user",
         "email": "Email",
-        "password": "Mật khẩu",
+        "password": "Password",
         "first-name": "First name",
         "last-name": "Last name",
         "phone-number": "Phone number",
@@ -50,5 +50,9 @@
         "image": "Avatar",
         "save": "Save user",
         "edit": "Edit user"
+    },
+    "homepage": {
+        "out-standing-doctor": "Outstanding doctor",
+        "more-infor": "More infor"
     }
 }
