--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,5 +57,11 @@
     "homepage": {
         "out-standing-doctor": "Outstanding doctor",
         "more-infor": "More infor"
+    },
+    "manage-schedule": {
+        "title": "Manage doctor'schedule",
+        "choose-doctor": "Choose doctor",
+        "choose-date": "Choose date",
+        "save": "Save infor"
     }
 }
