--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -57,5 +57,11 @@
     "homepage": {
         "out-standing-doctor": "Bác sĩ nổi bật",
         "more-infor": "Xem thêm"
+    },
+    "manage-schedule": {
+        "title": "Quản lý lịch khám bệnh bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
     }
 }
