--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -63,5 +63,13 @@
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu thông tin"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn một lịch hẹn khác",
+            "choose": "chọn ",
+            "book-free": " và đặn miễn phí"
+        }
     }
 }
