--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -70,6 +70,13 @@
             "no-schedule": "The doctor does not have an appointment during this time, please choose another time",
             "choose": "choose ",
             "book-free": " and book-free"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Address of examination",
+            "price": "Examination price",
+            "detail": "See details",
+            "payment": "the patient can pay the cost in the form of: ",
+            "hide-price": "Hide price list"
         }
     },
     "admin": {
