--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -70,6 +70,13 @@
             "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn một lịch hẹn khác",
             "choose": "chọn ",
             "book-free": " và đặn miễn phí"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Địa chỉ khám",
+            "price": "Giá khám",
+            "detail": "Xem chi tiết",
+            "payment": "Người bệnh có thể thanh toán bằng các hình thức: ",
+            "hide-price": "Ẩn bảng giá"
         }
     },
     "admin": {
