Hoàn Thiện Chức Năng Đặt Lịch Khám Bệnh Cho Bệnh Nhân

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -77,6 +77,20 @@
             "detail": "Xem chi tiết",
             "payment": "Người bệnh có thể thanh toán bằng các hình thức: ",
             "hide-price": "Ẩn bảng giá"
+        },
+        "booking-modal": {
+            "title": "Thông tin đặt lịch khám bệnh",
+            "fullName": "Họ và tên",
+            "phoneNumber": "Số điện thoại",
+            "email": "email",
+            "address": "Địa chỉ",
+            "birthDay": "Ngày sinh",
+            "reason": "Lý do khám",
+            "gender": "Giới tính",
+            "btnConfirm": "Xác nhận",
+            "btnCancel": "Hủy bỏ",
+            "priceBooking": "Miễn phí đặt lịch",
+            "price": "Giá khám: "
         }
     },
     "admin": {
