--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -77,6 +77,20 @@
             "detail": "See details",
             "payment": "the patient can pay the cost in the form of: ",
             "hide-price": "Hide price list"
+        },
+        "booking-modal": {
+            "title": "Medical booking information",
+            "fullName": "Full name",
+            "phoneNumber": "Phone number",
+            "email": "Email",
+            "address": "Address",
+            "birthDay": "BirthDay",
+            "reason": "Reasons for medical examination",
+            "gender": "Gender",
+            "btnConfirm": "Confirm",
+            "btnCancel": "Cancel",
+            "priceBooking": "Book free",
+            "price": "Price: "
         }
     },
     "admin": {
