--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -56,7 +56,8 @@
     },
     "homepage": {
         "out-standing-doctor": "Outstanding doctor",
-        "more-infor": "More infor"
+        "more-infor": "More infor",
+        "specialty-popular": "Popular Specialty"
     },
     "manage-schedule": {
         "title": "Manage doctor'schedule",
@@ -105,7 +106,9 @@
             "province": "Province",
             "nameClinic": "Clinic's name",
             "addressClinic": "Clinic's address",
-            "note": "Note"
+            "note": "Note",
+            "specialty": "Specialty",
+            "clinic": "Clinics"
         }
     }
 }
