--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -56,7 +56,8 @@
     },
     "homepage": {
         "out-standing-doctor": "Bác sĩ nổi bật",
-        "more-infor": "Xem thêm"
+        "more-infor": "Xem thêm",
+        "specialty-popular": "Chuyên khoa phổ biến"
     },
     "manage-schedule": {
         "title": "Quản lý lịch khám bệnh bác sĩ",
@@ -105,7 +106,9 @@
             "province": "Tỉnh thành",
             "nameClinic": "Tên phòng khám",
             "addressClinic": "Địa chỉ phòng khám",
-            "note": "Ghi chú"
+            "note": "Ghi chú",
+            "specialty": "Chuyên khoa",
+            "clinic": "Phòng khám"
         }
     }
 }
