--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -36,7 +36,8 @@
             "manage-handbook": "Manage handbook"
         },
         "doctor": {
-            "manage-schedule": "Manage doctor's schedule"
+            "manage-schedule": "Manage doctor's schedule",
+            "manage-patient": "Manage doctor's patient"
         }
     },
     "manage-user": {
@@ -57,7 +58,8 @@
     "homepage": {
         "out-standing-doctor": "Outstanding doctor",
         "more-infor": "More infor",
-        "specialty-popular": "Popular Specialty"
+        "specialty-popular": "Popular Specialty",
+        "outStanding-medical-facility": "Top hospital"
     },
     "manage-schedule": {
         "title": "Manage doctor'schedule",
